<resources>
    <string name="app_name">MoodleApp</string>

    <!--Pantalla de Bienvenida-->
    <string name="welcome_title">MoodleApp</string>
    <string name="welcome_subtitle">Tu campus virtual en tu bolsillo</string>
    <string name="btn_google_login">Iniciar sesión con Google</string>
    <string name="welcome_disclaimer">Al iniciar sesión, aceptas nuestros términos y condiciones</string>


    <!--Lista de Cursos-->
    <string name="greeting_hello">Hola, %1$s 👋</string>
    <string name="courses_subtitle">Tus cursos matriculados</string>
    <string name="course_not_found">Curso no encontrado</string>


    <!--Footer-->
    <string name="curso">Cursos</string>
    <string name="profile_text">Perfil</string>
    <string name="profile_title">Mi Perfil</string>

    <string name="course_name">Programación&#10;Avanzada</string>
    <string name="course_code">PROG-ADV-2025</string>
    <string name="course_teacher">Dr. Carlos Mendoza</string>

    <string name="tab_tasks">Tareas</string>
    <string name="tab_forums">Foros</string>
    <string name="tab_resources">Recursos</string>

    <string name="close_sesion">Cerrar Sesion</string>

    <string name="contentBack">Volver a la pagina anterior</string>
    <string name="contentPerfil">Icono de un perfil</string>
    <string name="icChat">Icono de un chat</string>
    <string name="icCalendario">Icono de un Calendario</string>

    <string name="iconopdf">Icono PDF</string>
    <string name="pdf">PDF</string>

    <string name="foro">Foro</string>
    <string name="btn_Responder">Responder</string>

    <string name="comment_dialog_title">Escribe tu respuesta</string>
    <string name="comment_dialog_hint">Comparte tu opinión…</string>
    <string name="comment_dialog_btn_cancel">Cancelar</string>
    <string name="comment_dialog_btn_publish">Publicar</string>

    <string name="message_vali">"Por favor, No puede enviar texto Vacio"</string>

    <string name="disc_toast_success">"Discusión Enviada: "</string>
    <string name="disc_toast_fall">"Error al enviar: "</string>

    <string name="text_entregar">Entregar</string>

    <string name="enviar_tarea">Enviar tarea</string>

    <string name="tipo_entrega">Tipo de entrega</string>

    <string name="respuesta_texto">Respuesta de texto</string>

    <string name="hint_respuesta">Escribe tu respuesta...</string>

    <string name="archivo_adjunto">Archivo adjunto</string>

    <string name="seleccionar_archivo">Seleccionar archivo</string>

    <string name="sin_archivo">Sin archivo seleccionado</string>

    <string name="error_configuracion">Esta tarea no tiene habilitado un tipo de entrega compatible.</string>

</resources>