<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardForo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Icono -->
        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/icChat"
            android:src="@drawable/ic_forum"/>

        <!-- Título -->
        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="#212121"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Autor y respuestas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <!-- Autor -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/contentPerfil"
                    android:src="@drawable/ic_profile"
                    android:backgroundTint="@color/background_light_gray"/>

                <TextView
                    android:id="@+id/txtProfesor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="#757575"
                    android:textSize="14sp"/>
            </LinearLayout>

            <!-- Espacio -->
            <Space
                android:layout_width="24dp"
                android:layout_height="1dp"/>

            <!-- Respuestas -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/icChat"
                    android:src="@drawable/ic_comment"
                    android:backgroundTint="@color/background_light_gray" />

                <TextView
                    android:id="@+id/txtRespuestas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="#757575"
                    android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Fecha -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/icCalendario"
                android:src="@drawable/ic_schedule"
                app:tint="#757575" />

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="#757575"
                android:backgroundTint="@color/background_light_gray"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>